--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,24 +1,38 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Tests
-
+name: CI
 on: [push]
 
 jobs:
-  build:
-    runs-on: [ubuntu-latest]
-      
-    strategy:
-      matrix:
-        node-version: [12.x]
+  build-frontend:
+    name: Build Frontend
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - run: yarn install --frozen-lockfile && yarn build:prod
 
-      - name: Tests
-        run: yarn run test
+  test-frontend:
+    name: Test Frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - run: yarn install --frozen-lockfile && yarn run test
