--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "url": "philippmeissner.dev",
     "email": "pm@zeit.dev"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
+    "start": "node server.js",
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "clean": "rm -Rf ./dist",
     "build:prod": "ng build --prod",
@@ -44,6 +48,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "express": "^4.17.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
     "karma": "~5.0.1",
