attempt to fix actions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "pm@zeit.dev"
   },
   "engines": {
-    "node": "12.x"
+    "node": ">=12.x"
   },
   "scripts": {
     "start": "node server.js",
